tests/e2e/semantics/implicit_cast_regex_any.error
Error: syntax error in story at line 2, column 5

2|    a = any_var == /fo/
          ^^^^^^^^^^^^^^^

E0124: Equality comparison not supported between `any` and `regexp`.
