tests/e2e/semantics/implicit_cast_regex_any.story
any_var = yaml parse data:"foobar"
a = any_var == /fo/
